--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,9 @@ website:
           - text: "READy Exercise"
             file: ready-exercise/ready-exercise.html
           - text: "Data Exercise"
-            file: data-exercise/data-exercise.qmd  
+            file: data-exercise/data-exercise.qmd
+          - text: "CDC Data Exercise"
+            file: cdcdata-exercise/cdcdata-exercise.qmd    
     right:
       - icon: github 
         href: https://github.com/JosonSEA/EmilJoson-portfolio.git        
